--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-Django==3.1.*
-python-dotenv==0.15.*
-folium==0.11.*
-Pillow==8.0.*  # required by Windows environment
+asgiref==3.8.1
+branca==0.8.1
+Django==3.1.14
+folium==0.11.0
+jinja2==3.1.6
+MarkupSafe==2.1.5
+Pillow==8.0.1
+python-dotenv==0.15.0
+pytz==2025.1
+requests==2.32.3
+sqlparse==0.5.3
